translation-tool/inputs/source_meta/objects/Satelite_Beams__c.object
<CustomObject>
    <description>Mastered in Salesforce and stays in Salesforce.</description>
    <fields>
        <fullName>Beam_Location__c</fullName>
        <label>Beam Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beam_or_Downlink_Cell_ID__c</fullName>
        <description>&quot;Beam is applicable for Satellite Name = Echostar 17, Echostar 19
Downlink Cell is applicable for Satellite Name = Spaceway&quot;</description>
        <label>Beam or Downlink Cell ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Satellite_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Satellite Name</label>
        <referenceTo>Satellite__c</referenceTo>
        <relationshipName>Satellite_Beams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Status__c</fullName>
        <label>System Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enabled</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Virtual_Beam_ID__c</fullName>
        <description>Virtual Beam is applicable for Satellite Name = Echostar 19</description>
        <label>Virtual Beam ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Satellite Beam</label>
    <nameField>
        <displayFormat>SatDetail-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Satellite Beams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>